[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/screens/screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/screens/main_menu.gd" type="Script" id=2]

[node name="MainMenu" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="PlayButton" type="Button" parent="Menu" index="0"]
margin_right = 67.0
margin_bottom = 21.0
text = "Play"

[node name="CreditsButton" type="Button" parent="Menu" index="1"]
margin_top = 25.0
margin_right = 67.0
margin_bottom = 46.0
text = "Credits"

[node name="QuitButton" type="Button" parent="Menu" index="2"]
margin_top = 50.0
margin_right = 67.0
margin_bottom = 71.0
text = "Quit"

[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
